# TinyRT

./: .gitmodules  CMakeLists.txt  README.md
scenes/: cornellbox.scene
scripts/: build.bat  build.sh
shaders/: shader.comp  shader.frag  shader.vert
src/: application.c  application.h  color.h  main.c  math_util.c  math_util.h  ray.c  ray.h  renderer.c  renderer.h  scene.c  scene.h  vector.c  vector.h  window.c  window.h
